feat: brownie FundMe project done

--- a/brownie_fund_me/brownie-config.yaml
+++ b/brownie_fund_me/brownie-config.yaml
@@ -6,5 +6,20 @@ compiler:
         remappings:
             - "@chainlink=smartcontractkit/chainlink-brownie-contracts@1.1.1"
 dotenv: .env
+networks:
+    default: development
+    rinkeby:
+        eth_usd_price_feed: "0x8A753747A1Fa494EC906cE90E9f37563A8AF630e"
+        verify: True
+    mainnet-fork-dev:
+        eth_usd_price_feed: "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419"
+        verify: False
+    development:
+        verify: False
+    ganache-local:
+        # brownie networks add Ethereum ganache-local host=http://127.0.0.1:8545 chainid=1337
+        # brownie networks list
+        # brownie run scripts/deploy.py --network ganache-local
+        verify: False
 wallets:
     from_key: ${PRIVATE_KEY}
