feat: add hardhhat fundme project frontend

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,8 @@
 				"esbenp.prettier-vscode",
 				"2gua.rainbow-brackets",
 				"NomicFoundation.hardhat-solidity",
-				"WakaTime.vscode-wakatime"
+				"WakaTime.vscode-wakatime",
+				"ritwickdey.LiveServer"
 			]
 		}
 	},
