--- a/nextjs/nextjs_web3modal/package.json
+++ b/nextjs/nextjs_web3modal/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.7.8",
+    "ethers": "^5.6.8",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
